--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,7 +33,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="31dp"
-                android:text="@string/temp_level" />
+                android:text="@string/temp_level"
+                android:textColor="?attr/primaryTextColor"/>
 
             <TextView
                 android:id="@+id/TextTemp"
@@ -44,7 +45,8 @@
                 android:layout_marginStart="80dp"
                 android:layout_toEndOf="@+id/TempTextViewLevel"
                 android:text="@string/temp_def_value"
-                android:textAlignment="viewStart" />
+                android:textAlignment="viewStart"
+                android:textColor="?attr/secondaryTextColor" />
 
         </RelativeLayout>
 
@@ -60,7 +62,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="31dp"
-                android:text="@string/smoke_level" />
+                android:text="@string/smoke_level"
+                android:textColor="?attr/primaryTextColor" />
 
             <TextView
                 android:id="@+id/TextSmoke"
@@ -71,7 +74,8 @@
                 android:layout_marginStart="73dp"
                 android:layout_toEndOf="@+id/smokeTextViewLevel"
                 android:text="@string/smoke_def_value"
-                android:textAlignment="viewStart" />
+                android:textAlignment="viewStart"
+                android:textColor="?attr/secondaryTextColor" />
 
         </RelativeLayout>
 
@@ -87,7 +91,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="31dp"
-                android:text="@string/temp_thres" />
+                android:text="@string/temp_thres"
+                android:textColor="?attr/primaryTextColor" />
 
             <EditText
                 android:id="@+id/editValueTemp"
@@ -96,7 +101,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:textColor="?attr/secondaryTextColor" />
 
             <Button
                 android:id="@+id/TempThreshSend"
@@ -108,7 +114,6 @@
                 android:layout_marginStart="36dp"
                 android:layout_toEndOf="@+id/editValueTemp"
                 android:text="@string/sendBtnTemp"
-                android:textColor="@color/colorAccent"
                 android:visibility="invisible" />
 
         </RelativeLayout>
@@ -125,7 +130,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="31dp"
-                android:text="@string/smoke_thres" />
+                android:text="@string/smoke_thres"
+                android:textColor="?attr/primaryTextColor" />
 
             <EditText
                 android:id="@+id/editValueSmoke"
@@ -134,7 +140,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:textColor="?attr/secondaryTextColor" />
 
             <Button
                 android:id="@+id/SmokeThreshSend"
@@ -146,7 +153,6 @@
                 android:layout_marginStart="38dp"
                 android:layout_toEndOf="@+id/editValueSmoke"
                 android:text="@string/sendBtnSmoke"
-                android:textColor="@color/colorAccent"
                 android:visibility="invisible" />
 
         </RelativeLayout>
