--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,53 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorDarkBackground</item>
+        <item name="colorPrimaryDark">@color/colorDarkBackground</item>
+        <item name="colorAccent">@color/colorSplash</item>
+    </style>
+
+    <!-- Light base activity theme -->
+    <style name="AppTheme.Primary.Base.Dark" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/colorDarkBackground</item>
+        <item name="colorPrimaryDark">@color/colorDarkBackground</item>
+        <item name="primaryTextColor">#F4F4F6</item>
+        <item name="secondaryTextColor">#96F4F4F6</item>
+        <item name="backgroundCardColor">#FFFF</item>
+        <item name="dividerColor">#F2F2F3</item>
+    </style>
+
+    <!-- Dark base activity theme -->
+    <style name="AppTheme.Primary.Base.Light"    parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@android:color/holo_blue_dark</item>
+        <item name="colorPrimaryDark">@color/colorDarkBackground</item>
+        <item name="primaryTextColor">#33343B</item>
+        <item name="secondaryTextColor">#8033343B</item>
+        <item name="backgroundCardColor">#28292e</item>
+        <item name="dividerColor">#F2F2F3</item>
+        <item name="android:textColorSecondaryInverse">@android:color/primary_text_light</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorPrimaryInverse">@android:color/black</item>
+    </style>
+
+    <!-- Specific Feed activity theme -->
+    <style name="AppThemeLight" parent="AppTheme.Primary.Base.Light">
+        <item name="android:windowBackground">@color/colorLightBackground</item>
+        <item name="colorPrimary">@color/IstBlue</item>
+        <item name="colorAccent">@color/IstBlue</item>
+        <item name="android:navigationBarColor">?android:attr/colorPrimaryDark</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@android:color/secondary_text_light</item>
+        <item name="android:colorForeground">@android:color/secondary_text_dark</item>
+        <item name="android:colorBackground">@color/colorLightBackground</item>
+        <item name="android:statusBarColor">?android:attr/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/IstBlueDark</item>
+    </style>
+
+    <style name="AppThemeDark" parent="AppTheme.Primary.Base.Dark">
+        <item name="android:windowBackground">@color/colorDarkBackgroundSafe</item>
+        <item name="android:navigationBarColor">@color/colorDarkBackground</item>
+        <item name="android:textColorSecondary">@android:color/secondary_text_dark</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -20,4 +64,5 @@
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
+
 </resources>
