--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -69,9 +69,8 @@
                 android:id="@+id/TextSmoke"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignBaseline="@+id/smokeTextViewLevel"
-                android:layout_alignBottom="@+id/smokeTextViewLevel"
-                android:layout_marginStart="73dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="117dp"
                 android:layout_toEndOf="@+id/smokeTextViewLevel"
                 android:text="@string/smoke_def_value"
                 android:textAlignment="viewStart"
