--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@android:color/holo_blue_light</color>
-    <color name="colorPrimaryDark">@android:color/holo_blue_dark</color>
-    <color name="colorAccent">@android:color/holo_red_dark</color>
+    <color name="colorPrimary">@color/IstBlue</color>
+    <color name="colorPrimaryDark">@color/IstBlueDark</color>
+    <color name="colorAccent">#c1021a</color>
     <color name="colorSplash">@android:color/holo_blue_light</color>
 
-    <color name="colorLightBackground">#dddddf</color>
+    <color name="colorLightBackground">#efefef</color>
     <color name="colorDarkBackground">#002a3b</color>
-    <color name="accent_material_dark">#0d47a1</color>
+    <color name="accent_material_dark">#fe880c</color>
     <color name="colorDarkBackgroundSafe">#212121</color>
     <color name="IstBlue">#00a0e4</color>
     <color name="background_material_dark">#ffffff</color>
