--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,21 +35,24 @@
     <!-- Specific Feed activity theme -->
     <style name="AppThemeLight" parent="AppTheme.Primary.Base.Light">
         <item name="android:windowBackground">@color/colorLightBackground</item>
-        <item name="colorPrimary">@color/IstBlue</item>
-        <item name="colorAccent">@color/IstBlue</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="android:navigationBarColor">?android:attr/colorPrimaryDark</item>
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:textColorSecondary">@android:color/secondary_text_light</item>
         <item name="android:colorForeground">@android:color/secondary_text_dark</item>
         <item name="android:colorBackground">@color/colorLightBackground</item>
         <item name="android:statusBarColor">?android:attr/colorPrimaryDark</item>
-        <item name="colorPrimaryDark">@color/IstBlueDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppThemeDark" parent="AppTheme.Primary.Base.Dark">
         <item name="android:windowBackground">@color/colorDarkBackgroundSafe</item>
         <item name="android:navigationBarColor">@color/colorDarkBackground</item>
         <item name="android:textColorSecondary">@android:color/secondary_text_dark</item>
+        <item name="android:statusBarColor">@color/colorDarkBackground</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
