Now more divided, using fragments. Background sync enabled. Settings updated Getting data from cloud is a go.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -9,12 +9,29 @@
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
     <EditTextPreference
         android:capitalize="words"
-        android:defaultValue="@string/pref_default_display_name"
-        android:inputType="textCapWords"
-        android:key="example_text"
+        android:inputType="text"
+        android:key="API_SERVER"
         android:maxLines="1"
         android:selectAllOnFocus="true"
         android:singleLine="true"
-        android:title="@string/pref_title_display_name" />
+        android:title="@string/pref_title_api_server" />
+
+    <EditTextPreference
+        android:capitalize="words"
+        android:inputType="text"
+        android:key="API_ROUTE"
+        android:maxLines="1"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="@string/pref_title_api_route" />
+
+    <EditTextPreference
+        android:capitalize="words"
+        android:inputType="number"
+        android:key="API_PORT"
+        android:maxLines="1"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="@string/pref_title_api_port" />
 
 </PreferenceScreen>
