--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.joaomariodev.rmsfsensoractuationapp.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="com.joaomariodev.rmsfsensoractuationapp.MainActivity">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="64dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,22 +30,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="31dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="9dp"
+                android:rotation="-90"
                 android:text="@string/temp_level"
-                android:textColor="?attr/primaryTextColor"/>
+                android:textColor="?attr/primaryTextColor" />
 
-            <TextView
-                android:id="@+id/TextTemp"
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chartTemp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignBaseline="@+id/TempTextViewLevel"
-                android:layout_alignBottom="@+id/TempTextViewLevel"
-                android:layout_marginStart="80dp"
-                android:layout_toEndOf="@+id/TempTextViewLevel"
-                android:text="@string/temp_def_value"
-                android:textAlignment="viewStart"
-                android:textColor="?attr/secondaryTextColor" />
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="10dp" />
 
         </RelativeLayout>
 
@@ -56,25 +56,27 @@
             android:layout_weight="1.2">
 
             <TextView
-                android:id="@+id/smokeTextViewLevel"
+                android:id="@+id/SmokeTextViewLevel"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="31dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignStart="@+id/chartSmoke"
+                android:layout_marginStart="3dp"
+                android:rotation="-90"
                 android:text="@string/smoke_level"
                 android:textColor="?attr/primaryTextColor" />
 
-            <TextView
-                android:id="@+id/TextSmoke"
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chartSmoke"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="117dp"
-                android:layout_toEndOf="@+id/smokeTextViewLevel"
-                android:text="@string/smoke_def_value"
-                android:textAlignment="viewStart"
-                android:textColor="?attr/secondaryTextColor" />
+                android:layout_marginBottom="5dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="10dp" />
 
         </RelativeLayout>
 
