--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
         android:orientation="vertical"
@@ -25,17 +25,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1.2">
 
-            <TextView
-                android:id="@+id/TempTextViewLevel"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="9dp"
-                android:rotation="-90"
-                android:text="@string/temp_level"
-                android:textColor="?attr/primaryTextColor" />
-
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/chartTemp"
                 android:layout_width="match_parent"
@@ -45,8 +34,17 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="5dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:translationX="-4dp"
+                app:srcCompat="@mipmap/temp_pic" />
 
         </RelativeLayout>
 
@@ -54,17 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.2">
-
-            <TextView
-                android:id="@+id/SmokeTextViewLevel"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/chartSmoke"
-                android:layout_marginStart="3dp"
-                android:rotation="-90"
-                android:text="@string/smoke_level"
-                android:textColor="?attr/primaryTextColor" />
 
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/chartSmoke"
@@ -75,8 +62,16 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginBottom="5dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginStart="25dp"
+                android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:translationX="-4dp"
+                app:srcCompat="@mipmap/smoke_pic" />
 
         </RelativeLayout>
 
