--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,5 +7,5 @@
         android:icon="@drawable/ic_settings_black_24dp"
         android:orderInCategory="101"
         android:title="@string/action_settings"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
 </menu>
