--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:id="@+id/cloud_fragment"
+    android:layout_width="0dp"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.joaomariodev.rmsfsensoractuationapp.MainActivity">
@@ -43,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
+                android:contentDescription="@string/temperature"
                 android:translationX="-4dp"
                 app:srcCompat="@mipmap/temp_pic" />
 
@@ -70,6 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:contentDescription="@string/gas_level"
                 android:translationX="-4dp"
                 app:srcCompat="@mipmap/smoke_pic" />
 
@@ -98,6 +101,7 @@
                 android:layout_centerVertical="true"
                 android:ems="10"
                 android:inputType="numberDecimal"
+                android:labelFor="@+id/temperature"
                 android:textColor="?attr/secondaryTextColor" />
 
             <Button
@@ -137,6 +141,7 @@
                 android:layout_centerVertical="true"
                 android:ems="10"
                 android:inputType="numberDecimal"
+                android:labelFor="@+id/smokeTextViewThresh"
                 android:textColor="?attr/secondaryTextColor" />
 
             <Button
