--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -9,7 +9,7 @@
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
     <EditTextPreference
         android:capitalize="words"
-        android:defaultValue="http://jsonplaceholder.typicode.com/"
+        android:defaultValue="http://rmsf-server.herokuapp.com/"
         android:inputType="text"
         android:key="API_SERVER"
         android:maxLines="1"
