--- a/app/src/main/res/layout/fragment_data.xml
+++ b/app/src/main/res/layout/fragment_data.xml
@@ -8,120 +8,112 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.joaomariodev.rmsfsensoractuationapp.Controller.MainActivity">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/temp"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="49dp"
+        android:layout_marginTop="32dp"
+        android:contentDescription="@string/temperature"
+        android:translationX="-4dp"
+        app:layout_constraintBottom_toTopOf="@+id/smoke"
+        app:layout_constraintEnd_toEndOf="@+id/smoke"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/smoke"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread_inside"
+        app:srcCompat="@mipmap/temp_pic" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chartTemp"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="@dimen/chart_height"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/temp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/temp"
+        app:layout_constraintTop_toTopOf="@+id/temp" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.2">
+    <ImageView
+        android:id="@+id/smoke"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:contentDescription="@string/gas_level"
+        android:translationX="-4dp"
+        app:layout_constraintBottom_toTopOf="@+id/water"
+        app:layout_constraintEnd_toEndOf="@+id/water"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/water"
+        app:layout_constraintTop_toBottomOf="@+id/temp"
+        app:srcCompat="@mipmap/smoke_pic" />
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/chartTemp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp" />
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chartSmoke"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/chart_height"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/smoke"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/smoke"
+        app:layout_constraintTop_toTopOf="@+id/smoke" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:contentDescription="@string/temperature"
-                android:translationX="-4dp"
-                app:srcCompat="@mipmap/temp_pic" />
+    <ImageView
+        android:id="@+id/water"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:contentDescription="@string/water_pump"
+        app:layout_constraintBottom_toTopOf="@+id/alarm"
+        app:layout_constraintEnd_toEndOf="@+id/alarm"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/alarm"
+        app:layout_constraintTop_toBottomOf="@+id/smoke"
+        app:srcCompat="@drawable/waterpump" />
 
-        </RelativeLayout>
+    <TextView
+        android:id="@+id/water_pump_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto_slab"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/water"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/water"
+        app:layout_constraintTop_toTopOf="@+id/water"
+        tools:text="Test Text Filling This Space" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.2">
+    <ImageView
+        android:id="@+id/alarm"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="@string/alarm"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/water"
+        app:srcCompat="@drawable/alarm" />
 
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/chartSmoke"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="5dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="10dp" />
+    <TextView
+        android:id="@+id/alarm_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto_slab"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/alarm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/alarm"
+        app:layout_constraintTop_toTopOf="@+id/alarm"
+        tools:text="Test Text Filling This Space" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="41dp"
-                android:contentDescription="@string/gas_level"
-                android:translationX="-4dp"
-                app:srcCompat="@mipmap/smoke_pic" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.2">
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="41dp"
-                android:layout_height="41dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:contentDescription="@string/alarm"
-                app:srcCompat="@drawable/alarm" />
-
-            <TextView
-                android:id="@+id/alarm_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.2">
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="41dp"
-                android:layout_height="41dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:contentDescription="@string/water_pump"
-                app:srcCompat="@drawable/waterpump" />
-
-            <TextView
-                android:id="@+id/water_pump_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true" />
-        </RelativeLayout>
-
-    </LinearLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="70dp" />
 
 </android.support.constraint.ConstraintLayout>
