--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,7 +5,9 @@
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_settings_black_24dp"
+        android:iconTint="@color/colorAccent"
         android:orderInCategory="101"
         android:title="@string/action_settings"
+        android:visible="true"
         app:showAsAction="never|always" />
 </menu>
