--- a/app/src/main/res/layout/fragment_action.xml
+++ b/app/src/main/res/layout/fragment_action.xml
@@ -27,6 +27,17 @@
             android:layout_height="match_parent"
             android:layout_weight="1.2">
 
+            <ProgressBar
+                android:id="@+id/action_frag_progress"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:indeterminate="true"
+                android:visibility="invisible"
+                tools:visibility="visible" />
+
             <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="wrap_content"
