--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="icon_size">40dp</dimen>
     <dimen name="chart_height">80dp</dimen>
+    <dimen name="chart_height_landscape">70dp</dimen>
 </resources>
