--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,10 @@
     <color name="colorPrimary">@color/IstBlue</color>
     <color name="colorPrimaryDark">@color/IstBlueDark</color>
     <color name="colorAccent">#333333</color>
-    <color name="colorSplash">@android:color/holo_blue_light</color>
+    <color name="colorSplash">#000000</color>
 
     <color name="colorLightBackground">#efefef</color>
     <color name="colorDarkBackground">#002a3b</color>
-    <color name="colorDarkBackgroundSafe">#212121</color>
     <color name="IstBlue">#00a0e4</color>
     <color name="IstBlueDark">#004075</color>
 </resources>
