--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="icon_size">40dp</dimen>
     <dimen name="chart_height">80dp</dimen>
     <dimen name="chart_height_landscape">70dp</dimen>
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="nav_header_height">150dp</dimen>
 </resources>
