--- a/app/src/main/res/layout-land/app_bar_main.xml
+++ b/app/src/main/res/layout-land/app_bar_main.xml
@@ -26,7 +26,44 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+    </android.support.v4.view.ViewPager>
+
+    <TextView
+        android:id="@+id/deviceSelectedTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/select_device_warn_background"
+        android:fontFamily="@font/roboto_slab"
+        android:paddingEnd="3dp"
+        android:paddingStart="3dp"
+        android:text="Please select a device"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/deviceDataUpdatedTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/select_device_warn_background"
+        android:fontFamily="@font/roboto_slab"
+        android:paddingEnd="3dp"
+        android:paddingStart="3dp"
+        android:text="Device data not initialized"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:visibility="invisible"
+        tools:visibility="visible" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -46,6 +83,7 @@
         android:layout_gravity="center_vertical|center_horizontal"
         android:contentDescription="@string/low_connectivity_warning"
         android:visibility="invisible"
-        app:srcCompat="@drawable/ic_cloud_off_black_48dp" />
+        app:srcCompat="@drawable/ic_cloud_off_black_48dp"
+        tools:visibility="visible" />
 
 </android.support.design.widget.CoordinatorLayout>
