--- a/app/src/main/res/layout-land/app_bar_main.xml
+++ b/app/src/main/res/layout-land/app_bar_main.xml
@@ -45,7 +45,8 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/black"
         android:textSize="14sp"
-        android:visibility="visible" />
+        android:visibility="visible"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/deviceDataUpdatedTV"
@@ -63,6 +64,7 @@
         android:textColor="@android:color/black"
         android:textSize="14sp"
         android:visibility="invisible"
+        tools:ignore="HardcodedText"
         tools:visibility="visible" />
 
     <android.support.design.widget.FloatingActionButton
