--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -19,7 +19,8 @@
         android:textColor="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/createEmailText"
@@ -35,7 +36,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createUserText" />
+        app:layout_constraintTop_toBottomOf="@+id/createUserText"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/createPasswordText"
@@ -50,7 +52,8 @@
         android:textColor="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createEmailText" />
+        app:layout_constraintTop_toBottomOf="@+id/createEmailText"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/createUserBtn"
@@ -66,7 +69,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createPasswordText" />
+        app:layout_constraintTop_toBottomOf="@+id/createPasswordText"
+        tools:ignore="HardcodedText" />
 
     <ProgressBar
         android:id="@+id/createSpinner"
