--- a/app/src/main/res/layout/add_application_dialog.xml
+++ b/app/src/main/res/layout/add_application_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@color/colorLightBackground"
@@ -14,7 +15,8 @@
         android:text="Add Application"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/addApp_AppID"
@@ -28,7 +30,8 @@
         android:inputType="text"
         android:singleLine="false"
         android:textColor="@android:color/black"
-        android:textColorHint="@color/colorAccent" />
+        android:textColorHint="@color/colorAccent"
+        tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/addApp_AppKey"
@@ -41,5 +44,6 @@
         android:hint="AppKey"
         android:inputType="textMultiLine"
         android:textColor="@android:color/black"
-        android:textColorHint="@color/colorAccent" />
+        android:textColorHint="@color/colorAccent"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
