--- a/app/src/main/res/layout/add_device_dialog.xml
+++ b/app/src/main/res/layout/add_device_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
@@ -15,7 +16,8 @@
         android:text="Add Device"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        tools:ignore="HardcodedText" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -28,6 +30,7 @@
             android:layout_height="0dp"
             android:layout_marginEnd="18dp"
             android:background="@android:color/white"
+            android:contentDescription="Select application"
             android:elevation="0dp"
             android:rotation="-90"
             android:tint="@color/colorSplash"
@@ -62,5 +65,6 @@
         android:hint="DeviceID"
         android:inputType="text"
         android:textColor="@android:color/black"
-        android:textColorHint="@color/colorAccent" />
+        android:textColorHint="@color/colorAccent"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
