--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,6 +16,7 @@
         android:layout_height="71dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
+        android:contentDescription="App logo"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:layout_constraintBottom_toTopOf="@+id/loginBtnNavHeader"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +53,8 @@
         android:text="Log In"
         android:textAlignment="viewStart"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="HardcodedText" />
 
     <ImageButton
         android:id="@+id/addAppBtn"
@@ -62,6 +64,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="68dp"
         android:background="@android:color/transparent"
+        android:contentDescription="Add application"
         android:padding="5dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +79,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="24dp"
         android:background="@android:color/transparent"
+        android:contentDescription="Add device"
         android:padding="5dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,6 +94,7 @@
         android:layout_marginEnd="28dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/transparent"
+        android:contentDescription="Settings"
         android:tint="#333"
         app:layout_constraintBottom_toBottomOf="@+id/userNameNavHeader"
         app:layout_constraintEnd_toEndOf="parent"
