--- a/app/src/main/res/layout-land/fragment_data.xml
+++ b/app/src/main/res/layout-land/fragment_data.xml
@@ -70,19 +70,17 @@ tools:context="com.joaomariodev.rmsfsensoractuationapp.Controller.MainActivity">
         app:layout_constraintTop_toBottomOf="@+id/smoke"
         app:srcCompat="@drawable/waterpump" />
 
-<TextView
-    android:id="@+id/water_pump_text"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="16dp"
-    android:layout_marginStart="8dp"
-    android:fontFamily="@font/roboto_slab"
-    android:textColor="@android:color/black"
-    app:layout_constraintBottom_toBottomOf="@+id/water"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toEndOf="@+id/water"
-    app:layout_constraintTop_toTopOf="@+id/water"
-    tools:text="Test Text Filling This Space" />
+    <TextView
+        android:id="@+id/water_pump_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto_slab"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/water"
+        app:layout_constraintStart_toEndOf="@+id/water"
+        app:layout_constraintTop_toTopOf="@+id/water"
+        tools:text="Test Text Filling This Space" />
 
     <ImageView
         android:id="@+id/alarm"
@@ -98,18 +96,47 @@ tools:context="com.joaomariodev.rmsfsensoractuationapp.Controller.MainActivity">
         app:layout_constraintTop_toBottomOf="@+id/water"
         app:srcCompat="@drawable/alarm" />
 
-<TextView
-    android:id="@+id/alarm_text"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="16dp"
-    android:layout_marginStart="8dp"
-    android:fontFamily="@font/roboto_slab"
-    android:textColor="@android:color/black"
-    app:layout_constraintBottom_toBottomOf="@+id/alarm"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toEndOf="@+id/alarm"
-    app:layout_constraintTop_toTopOf="@+id/alarm"
-    tools:text="Test Text Filling This Space" />
+    <TextView
+        android:id="@+id/alarm_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:fontFamily="@font/roboto_slab"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/alarm"
+        app:layout_constraintStart_toEndOf="@+id/alarm"
+        app:layout_constraintTop_toTopOf="@+id/alarm"
+        app:layout_constraintVertical_bias="0.526"
+        tools:text="Test Text Filling This Space" />
+
+    <TextView
+        android:id="@+id/last_seen_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto_slab"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/last_seen"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/last_seen"
+        app:layout_constraintTop_toTopOf="@+id/last_seen"
+        tools:text="Test Text Filling This Space" />
+
+    <ImageView
+        android:id="@+id/last_seen"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="8dp"
+        android:contentDescription="@string/lastseen_indicator"
+        app:layout_constraintBottom_toTopOf="@+id/alarm_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toEndOf="@+id/water_pump_text"
+        app:layout_constraintTop_toBottomOf="@+id/water_pump_text"
+        app:srcCompat="@android:drawable/radiobutton_off_background" />
 
 </android.support.constraint.ConstraintLayout>
